fix: remove unnecessary overflow bars

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -17,7 +17,6 @@
   gap: 3rem;
   justify-content: space-between;
   position: relative;
-  overflow: scroll;
 }
 
 .home-bestselling-products {
@@ -27,7 +26,6 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  overflow: scroll;
 }
 
 .btn-see-all {
